--- a/Web/dashboard/package.json
+++ b/Web/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "login-page",
+  "name": "order-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,7 +22,6 @@
     "primeicons": "^4.0.0",
     "primereact": "^5.0.1",
     "react": "^17.0.1",
-    "react-autosuggest": "^10.0.3",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.2.0",
