--- a/Web/login-page/package.json
+++ b/Web/login-page/package.json
@@ -27,6 +27,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-simple-line-icons": "^1.0.8",
     "reactstrap": "^8.7.1",
     "web-vitals": "^0.2.4"
   },
