--- a/Web/dashboard/package.json
+++ b/Web/dashboard/package.json
@@ -22,10 +22,13 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-material-ui-carousel": "^2.1.1",
     "react-responsive-carousel": "^3.2.11",
     "react-scripts": "4.0.1",
+    "react-simple-line-icons": "^1.0.8",
     "react-tabindex": "^1.0.3",
+    "simple-line-icons": "^2.5.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -53,6 +56,8 @@
     ]
   },
   "devDependencies": {
+    "@iconify-icons/simple-line-icons": "^1.1.0",
+    "@iconify/react": "^1.1.3",
     "sass": "^1.30.0",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2"
