--- a/Web/dashboard/package.json
+++ b/Web/dashboard/package.json
@@ -3,12 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13",
-    "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -17,8 +13,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
     "ios-switch-material-ui": "^3.5.1",
-    "mdbreact": "^5.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
@@ -56,7 +52,18 @@
     ]
   },
   "devDependencies": {
+    "@iconify-icons/ant-design": "^1.1.0",
+    "@iconify-icons/bi": "^1.1.0",
+    "@iconify-icons/bx": "^1.1.0",
+    "@iconify-icons/cil": "^1.1.0",
+    "@iconify-icons/fa-solid": "^1.1.0",
+    "@iconify-icons/feather": "^1.1.0",
+    "@iconify-icons/fluent": "^1.1.1",
+    "@iconify-icons/grommet-icons": "^1.1.0",
+    "@iconify-icons/ls": "^1.1.0",
+    "@iconify-icons/ri": "^1.1.0",
     "@iconify-icons/simple-line-icons": "^1.1.0",
+    "@iconify/icons-simple-line-icons": "^1.1.0",
     "@iconify/react": "^1.1.3",
     "sass": "^1.30.0",
     "ts-loader": "^8.0.11",
