--- a/Web/login-page/package.json
+++ b/Web/login-page/package.json
@@ -6,11 +6,9 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.12",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.5",
@@ -54,5 +52,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify-icons/ant-design": "^1.1.0",
+    "@iconify-icons/bi": "^1.1.0",
+    "@iconify-icons/brandico": "^1.1.0",
+    "@iconify-icons/carbon": "^1.1.1",
+    "@iconify-icons/cib": "^1.1.0",
+    "@iconify-icons/cil": "^1.1.0",
+    "@iconify-icons/fe": "^1.1.0",
+    "@iconify-icons/feather": "^1.1.0",
+    "@iconify-icons/fluent": "^1.1.1",
+    "@iconify-icons/ion": "^1.1.1",
+    "@iconify-icons/openmoji": "^1.1.2",
+    "@iconify-icons/ph": "^1.1.1",
+    "@iconify-icons/simple-icons": "^1.1.7",
+    "@iconify-icons/teenyicons": "^1.1.0",
+    "@iconify-icons/vs": "^1.1.0",
+    "@iconify-icons/vscode-icons": "^1.1.1",
+    "@iconify/react": "^1.1.3"
   }
 }
