--- a/Web/dashboard/package.json
+++ b/Web/dashboard/package.json
@@ -17,6 +17,7 @@
     "ios-switch-material-ui": "^3.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-material-ui-carousel": "^2.1.1",
