--- a/Web/login-page/package.json
+++ b/Web/login-page/package.json
@@ -9,11 +9,15 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@hookform/error-message": "0.0.5",
+    "@hookform/resolvers": "^2.0.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
@@ -23,10 +27,14 @@
     "react-autosuggest": "^10.0.3",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
+    "react-hook-form": "^7.0.0",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-simple-line-icons": "^1.0.8",
-    "web-vitals": "^0.2.4"
+    "redux": "^4.0.5",
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
