--- a/package.json
+++ b/package.json
@@ -17,5 +17,15 @@
     "bugs": {
         "url": "https://github.com/BillNguyenDev/gogo-coffee-app/issues"
     },
-    "homepage": "https://github.com/BillNguyenDev/gogo-coffee-app#readme"
+    "homepage": "https://github.com/BillNguyenDev/gogo-coffee-app#readme",
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mysql": "^2.18.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.7"
+    }
 }
